fixing menu button transparency and spacing and adjusting menu bar text

--- a/client/components/aside/aside.scss
+++ b/client/components/aside/aside.scss
@@ -11,15 +11,20 @@
  ///////////////////////////////
 
 #aside-container {
-    // background-color:rgba(30,30,30,0.8);
-    background-color:#333;
+    background-color: rgba(22,30,32,0.7);
     overflow:scroll;
     margin-top:99px;
     display:block;
     padding-top:15px;
-    padding-left:33px;
-    &::-webkit-scrollbar { 
-        display: none; 
+    padding-left: 0.5%;
+    letter-spacing: 1px;
+
+    h4 {
+      letter-spacing: 1.5px;
+    }
+
+    &::-webkit-scrollbar {
+        display: none;
     }
     .close {
         color:white;
